--- a/static/public/index.html
+++ b/static/public/index.html
@@ -142,6 +142,7 @@
             bg-gray-800 text-white">
         <b>Elixir:</b>
         <br>Search the web without censorship. <br>Click here to get started! </a>
+        <p>Hosted by Astro</p>
     </div>
 
     <!-- search page -->
